VR add dimensions

--- a/mushroom_forest.html
+++ b/mushroom_forest.html
@@ -19,14 +19,26 @@
         camera-position environment="preset: goaland"
         info-message="htmlSrc: #messageText">
     <a-assets>
-        <img id="thumbIndex" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/index.png">
+        <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
         <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
         <img id="thumbForest" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/forest.png">
+        <img id="thumbDessert" crossOrigin="anonymous" src="./images/dessert.png">
+        <img id="thumbStarry" crossOrigin="anonymous" src="./images/starry.png">
+        <img id="thumbArches" crossOrigin="anonymous" src="./images/arches.png">
+        <img id="thumbDreamland" crossOrigin="anonymous" src="./images/dreamland.png">
+        <img id="thumbMushroomForest" crossOrigin="anonymous" src="./images/mushroomforest.png">
+        <img id="thumbMysteryLand" crossOrigin="anonymous" src="./images/mysteryland.png">
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
     </a-assets>
-
-    <a-entity light="type: point; color: #f4f4f4; intensity: 0.4; distance: 0" position="0 2 0"></a-entity>
-    <a-entity id="leftHand" link-controls="hand: left"></a-entity>
+    <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
+    <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
+    <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
+    <a-link href="dessert.html" position="-4 1.5 0" rotation="0 0 0" image="#thumbDessert"></a-link>
+    <a-link href="starry.html" position="0 1.5 0" rotation="0 0 0" image="#thumbStarry"></a-link>
+    <a-link href="arches.html" position="4 1.5 0" rotation="0 0 0" image="#thumbArches"></a-link>
+    <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
+    <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
+    <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
     <a-entity id="rightHand" link-controls="hand: right"></a-entity>
 </a-scene>
 </body>
