--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     <script src="js/components/aframe-tooltip-component.js"></script>
     <script src="js/components/camera-position.js"></script>
     <script src="js/components/link-controls.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script> // voor lopen in VR
+      <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
     <script src="js/info-message.js"></script>
   </head>
   <body>
+  <a-entity id="rig" movement-controls="fly: true">
+      <a-camera position="0 1.6 0">
+          <a-cursor></a-cursor>
+      </a-camera>
+  </a-entity>
     <a-scene
       raycaster="far: 100; objects: [link];"
       cursor="rayOrigin: mouse"
       camera-position
       environment
       info-message="htmlSrc: #messageText">
+        movement-controls="speed: 0.1"
       <a-assets>
        <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
        <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
