--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Links</title>
     <meta name="description" content="Links • A-Frame">
@@ -8,46 +8,54 @@
     <script src="js/components/aframe-tooltip-component.js"></script>
     <script src="js/components/camera-position.js"></script>
     <script src="js/components/link-controls.js"></script>
-      <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script> // voor lopen in VR
-      <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script> <!-- Voor lopen in VR -->
+    <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
     <script src="js/info-message.js"></script>
-  </head>
-  <body>
-  <a-entity id="rig" movement-controls="fly: true">
-      <a-camera position="0 1.6 0">
-          <a-cursor></a-cursor>
-      </a-camera>
-  </a-entity>
-    <a-scene
-      raycaster="far: 100; objects: [link];"
-      cursor="rayOrigin: mouse"
-      camera-position
-      environment
-      info-message="htmlSrc: #messageText">
-        movement-controls="speed: 0.1"
-      <a-assets>
-       <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
-       <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
-       <img id="thumbForest" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/forest.png">
+</head>
+<body>
+<a-scene
+        raycaster="far: 100; objects: [link];"
+        cursor="rayOrigin: mouse"
+        camera-position
+        environment
+        info-message="htmlSrc: #messageText">
+
+    <!-- Camera rig met movement-controls -->
+    <a-entity id="rig" movement-controls="speed: 0.1; fly: true">
+        <a-camera position="0 1.6 0">
+            <a-cursor></a-cursor>
+        </a-camera>
+    </a-entity>
+
+    <!-- Assets en links -->
+    <a-assets>
+        <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
+        <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
+        <img id="thumbForest" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/forest.png">
         <img id="thumbDessert" crossOrigin="anonymous" src="./images/dessert.png">
         <img id="thumbStarry" crossOrigin="anonymous" src="./images/starry.png">
         <img id="thumbArches" crossOrigin="anonymous" src="./images/arches.png">
         <img id="thumbDreamland" crossOrigin="anonymous" src="./images/dreamland.png">
         <img id="thumbMushroomForest" crossOrigin="anonymous" src="./images/mushroomforest.png">
         <img id="thumbMysteryLand" crossOrigin="anonymous" src="./images/mysteryland.png">
-       <a-asset-item id="messageText" src="message.html"></a-asset-item>
-      </a-assets>
-      <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
-      <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
-      <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
-      <a-link href="dessert.html" position="-4 1.5 0" rotation="0 0 0" image="#thumbDessert"></a-link>
-      <a-link href="starry.html" position="0 1.5 0" rotation="0 0 0" image="#thumbStarry"></a-link>
-      <a-link href="arches.html" position="4 1.5 0" rotation="0 0 0" image="#thumbArches"></a-link>
-      <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
-      <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
-      <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
-        <a-entity id="leftHand" link-controls="hand: left"></a-entity>
-        <a-entity id="rightHand" link-controls="hand: right"></a-entity>
-    </a-scene>
-  </body>
+        <a-asset-item id="messageText" src="message.html"></a-asset-item>
+    </a-assets>
+
+    <!-- Links -->
+    <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
+    <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
+    <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
+    <a-link href="dessert.html" position="-4 1.5 0" rotation="0 0 0" image="#thumbDessert"></a-link>
+    <a-link href="starry.html" position="0 1.5 0" rotation="0 0 0" image="#thumbStarry"></a-link>
+    <a-link href="arches.html" position="4 1.5 0" rotation="0 0 0" image="#thumbArches"></a-link>
+    <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
+    <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
+    <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
+
+    <!-- Hand controls -->
+    <a-entity id="leftHand" link-controls="hand: left"></a-entity>
+    <a-entity id="rightHand" link-controls="hand: right"></a-entity>
+
+</a-scene>
+</body>
 </html>
