--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         raycaster="far: 100; objects: [link];"
         cursor="rayOrigin: mouse"
         camera-position
-        environment="preset: forest"
+        environment
         info-message="htmlSrc: #messageText">
 
     <!-- Assets -->
@@ -37,7 +37,7 @@
     <!-- Camera rig met movement-controls -->
     <a-entity id="rig" movement-controls="speed: 0.1" position="0 1.6 0">
         <!-- Camera -->
-        <a-camera position="0 1.6 0">
+        <a-camera position="0 0.3 0">
             <a-cursor></a-cursor>
         </a-camera>
         <!-- Controllers -->
