--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/components/link-controls.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
     <script src="js/info-message.js"></script>
+    <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
 </head>
 <body>
 <a-scene
@@ -31,14 +32,11 @@
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
     </a-assets>
 
-    <a-entity id="rig" movement-controls="speed: 0.1" position="0 1.6 0">
-        <!-- Camera -->
-        <a-camera position="0 1.6 0">
-            <a-cursor></a-cursor>
-        </a-camera>
-        <!-- Controllers -->
-        <a-entity hand-controls="hand: left; handModelStyle: lowPoly; color: #FF0000"></a-entity>
-        <a-entity hand-controls="hand: right; handModelStyle: lowPoly; color: #0000FF"></a-entity>
+    <!-- Camera + controllers rig -->
+    <a-entity id="rig">
+        <a-camera position="0 1.6 0"></a-camera>
+        <a-entity oculus-touch-controls="hand: left" ></a-entity>
+        <a-entity oculus-touch-controls="hand: right" oculus-thumbstick-controls></a-entity>
     </a-entity>
 
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
