--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a-camera position="0 1.6 0"></a-camera>
         <a-entity oculus-touch-controls="hand: left" oculus-thumbstick-controls></a-entity>
         <a-entity oculus-touch-controls="hand: right" oculus-thumbstick-controls></a-entity>
-        <a-entity id="rig" position="0 1.6 0" movement-controls="speed: 0.1; fly: false">
+        <a-entity id="rig" position="0 1.6 0" movement-controls="speed: 0.1; fly: false"></a-entity>
     </a-entity>
 
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
