--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         camera-position
         environment
         info-message="htmlSrc: #messageText">
+
     <a-assets>
         <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
         <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
@@ -33,13 +34,13 @@
     </a-assets>
 
     <!-- Camera + controllers rig -->
-    <a-entity id="rig">
+    <a-entity id="rig" movement-controls="speed: 0.1; fly: false">
         <a-camera position="0 1.6 0"></a-camera>
-        <a-entity oculus-touch-controls="hand: left" oculus-thumbstick-controls></a-entity>
-        <a-entity oculus-touch-controls="hand: right" oculus-thumbstick-controls></a-entity>
-        <a-entity id="rig" position="0 1.6 0" movement-controls="speed: 0.1; fly: false"></a-entity>
+        <a-entity oculus-touch-controls="hand: left"></a-entity>
+        <a-entity oculus-touch-controls="hand: right"></a-entity>
     </a-entity>
 
+    <!-- Links -->
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
     <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
     <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
@@ -49,8 +50,6 @@
     <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
     <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
     <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
-    <a-entity id="leftHand" link-controls="hand: left"></a-entity>
-    <a-entity id="rightHand" link-controls="hand: right"></a-entity>
 </a-scene>
 </body>
 </html>
