--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="utf-8">
     <title>Links</title>
     <meta name="description" content="Links • A-Frame">
-    <script src="js/aframe-master.js"></script>
-    <script src="js/components/aframe-tooltip-component.js"></script>
-    <script src="js/components/camera-position.js"></script>
-    <script src="js/components/link-controls.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
-    <script src="js/info-message.js"></script>
-    <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
+    <script src="https://unpkg.com/aframe-oculus-touch-controls@1.2.0/dist/aframe-oculus-touch-controls.min.js"></script>
+    <script src="https://unpkg.com/aframe-teleport-controls@1.1.0/dist/teleport-controls.min.js"></script>
 </head>
 <body>
 <a-scene
         raycaster="far: 100; objects: [link];"
         cursor="rayOrigin: mouse"
-        camera-position
-        environment
-        info-message="htmlSrc: #messageText">
+        environment>
 
     <a-assets>
         <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
@@ -34,11 +30,14 @@
     </a-assets>
 
     <!-- Camera + controllers rig -->
-    <a-entity id="rig" movement-controls="speed: 0.1; fly: false">
+    <a-entity id="rig" movement-controls="speed: 1">
         <a-camera position="0 1.6 0"></a-camera>
         <a-entity oculus-touch-controls="hand: left"></a-entity>
         <a-entity oculus-touch-controls="hand: right"></a-entity>
     </a-entity>
+
+    <!-- Teleport Controls -->
+    <a-entity teleport-controls="camera: #camera; teleportOrigin: #rig"></a-entity>
 
     <!-- Links -->
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
@@ -50,6 +49,7 @@
     <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
     <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
     <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
+
 </a-scene>
 </body>
 </html>
