--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <title>Links</title>
     <meta name="description" content="Links • A-Frame">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe-extras.min.js"></script>
+    <script src="js/aframe-master.js"></script>
+    <script src="js/components/aframe-tooltip-component.js"></script>
+    <script src="js/components/camera-position.js"></script>
+    <script src="js/components/link-controls.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
-    <script src="https://unpkg.com/aframe-oculus-touch-controls@1.2.0/dist/aframe-oculus-touch-controls.min.js"></script>
-    <script src="https://unpkg.com/aframe-teleport-controls@1.1.0/dist/teleport-controls.min.js"></script>
+    <script src="js/info-message.js"></script>
+    <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
 </head>
 <body>
 <a-scene
         raycaster="far: 100; objects: [link];"
         cursor="rayOrigin: mouse"
-        environment>
-
+        camera-position
+        environment
+        info-message="htmlSrc: #messageText">
     <a-assets>
         <img id="thumbJapan" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/japan.png">
         <img id="thumbEgypt" crossOrigin="anonymous" src="https://cdn.aframe.io/link-traversal/thumbs/egypt.png">
@@ -30,16 +33,12 @@
     </a-assets>
 
     <!-- Camera + controllers rig -->
-    <a-entity id="rig" movement-controls="speed: 1">
+    <a-entity id="rig">
         <a-camera position="0 1.6 0"></a-camera>
-        <a-entity oculus-touch-controls="hand: left"></a-entity>
-        <a-entity oculus-touch-controls="hand: right"></a-entity>
+        <a-entity oculus-touch-controls="hand: left" oculus-thumbstick-controls></a-entity>
+        <a-entity oculus-touch-controls="hand: right" oculus-thumbstick-controls></a-entity>
     </a-entity>
 
-    <!-- Teleport Controls -->
-    <a-entity teleport-controls="camera: #camera; teleportOrigin: #rig"></a-entity>
-
-    <!-- Links -->
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
     <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
     <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
@@ -49,7 +48,8 @@
     <a-link href="dreamland.html" position="8 1.5 0" rotation="0 0 0" image="#thumbDreamland"></a-link>
     <a-link href="mushroom_forest.html" position="12 1.5 0" rotation="0 0 0" image="#thumbMushroomForest"></a-link>
     <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
-
+    <a-entity id="leftHand" link-controls="hand: left"></a-entity>
+    <a-entity id="rightHand" link-controls="hand: right"></a-entity>
 </a-scene>
 </body>
 </html>
