--- a/arches.html
+++ b/arches.html
@@ -10,6 +10,7 @@
     <script src="js/components/link-controls.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.x/dist/aframe-environment-component.min.js"></script>
     <script src="js/info-message.js"></script>
+    <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
 </head>
 <body>
 <a-scene
@@ -31,6 +32,24 @@
         <img id="thumbMysteryLand" crossOrigin="anonymous" src="./images/mysteryland.png">
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
     </a-assets>
+
+
+    <a-entity id="rig">
+        <a-camera position="0 1.6 0"></a-camera>
+        <a-entity
+                oculus-touch-controls="hand: left"
+                oculus-thumbstick-controls
+                link-controls="hand: left">
+        </a-entity>
+        <a-entity
+                oculus-touch-controls="hand: right"
+                oculus-thumbstick-controls
+                link-controls="hand: right">
+        </a-entity>
+    </a-entity>
+    <!-- Remove these duplicate controllers -->
+
+
     <a-link href="japan.html" position="-16 1.5 0" rotation="0 0 0" image="#thumbJapan"></a-link>
     <a-link href="egypt.html" position="-12 1.5 0" rotation="0 0 0" image="#thumbEgypt"></a-link>
     <a-link href="forest.html" position="-8 1.5 0" rotation="0 0 0" image="#thumbForest"></a-link>
