add movement to quest 2

--- a/starry.html
+++ b/starry.html
@@ -39,10 +39,11 @@
                 oculus-thumbstick-controls
                 link-controls="hand: left">
         </a-entity>
+
         <a-entity
                 oculus-touch-controls="hand: right"
-                oculus-thumbstick-controls
-                link-controls="hand: right">
+                oculus-thumbstick-controls>
+
         </a-entity>
     </a-entity>
     <!-- Remove these duplicate controllers -->
