add movement to quest 2

--- a/starry.html
+++ b/starry.html
@@ -46,7 +46,7 @@
         <!-- Rechter Oculus-controller -->
         <a-entity
                 id="right-controller"
-                oculus-touch-controls="hand: right"
+                oculus-touch-controls="hand: right">
 
         </a-entity>
     </a-entity>
