add movement to quest 2

--- a/starry.html
+++ b/starry.html
@@ -46,8 +46,7 @@
         <!-- Rechter Oculus-controller: alleen gebruikt voor rondkijken -->
         <a-entity
                 id="right-controller"
-                oculus-touch-controls="hand: right"
-                link-controls="hand: right">
+                oculus-touch-controls="hand: right">
         </a-entity>
     </a-entity>
 
