--- a/starry.html
+++ b/starry.html
@@ -32,21 +32,17 @@
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
     </a-assets>
 
-    <a-entity id="rig" movement-controls>
-        <!-- Camera met positionering binnen de rig -->
-        <a-camera position="0 1.6 0" id="camera"></a-camera>
-
-        <!-- Linker Oculus-controller: gebruik voor verplaatsing -->
+    <a-entity id="rig">
+        <a-camera position="0 1.6 0"></a-camera>
         <a-entity
                 oculus-touch-controls="hand: left"
                 oculus-thumbstick-controls
                 link-controls="hand: left">
         </a-entity>
-
-        <!-- Rechter Oculus-controller: alleen gebruikt voor rondkijken -->
         <a-entity
-                id="right-controller"
-                oculus-touch-controls="hand: right">
+                oculus-touch-controls="hand: right"
+                oculus-thumbstick-controls
+                link-controls="hand: right">
         </a-entity>
     </a-entity>
 
@@ -62,55 +58,6 @@
     <a-link href="mystery_land.html" position="16 1.5 0" rotation="0 0 0" image="#thumbMysteryLand"></a-link>
 
 </a-scene>
-
-<script>
-    // Selecteer de rechter controller en de rig
-    const rightController = document.getElementById('right-controller');
-    const rig = document.getElementById('rig');
-    const camera = document.getElementById('camera'); // Camera binnen de rig
-
-    // Luister naar thumbstick bewegingen op de rechter controller voor rondkijken
-    rightController.addEventListener('thumbstickmoved', function (event) {
-        // Haal de huidige rotatie van de rig op
-        const rotation = rig.getAttribute('rotation');
-
-        // Pas de y-rotatie aan op basis van de x-beweging van de thumbstick (links/rechts draaien)
-        rotation.y -= event.detail.x * 2;  // Gevoeligheid aanpassen indien nodig
-
-        // Stel de nieuwe rotatie in op de rig
-        rig.setAttribute('rotation', rotation);
-    });
-
-    // Luister naar bewegingen van de linker thumbstick en beweeg in de kijkrichting van de camera
-    document.querySelector('[movement-controls]').addEventListener('thumbstickmoved', function (event) {
-        const moveForward = event.detail.y; // Y-axis van de thumbstick voor vooruit/achteruit bewegen
-        const moveRight = event.detail.x;   // X-axis voor zijwaarts bewegen
-
-        // Huidige rotatie van de camera, niet de rig, nodig om de kijkrichting te bepalen
-        const cameraRotation = camera.object3D.rotation;
-
-        // Bereken de richting waarin de camera kijkt (op basis van radiaal waarden)
-        const angleRad = cameraRotation.y;
-
-        // Bewegingsvectoren (vooruit en zijwaarts) berekenen
-        const forwardVector = {x: -Math.sin(angleRad) * moveForward, z: -Math.cos(angleRad) * moveForward};
-        const strafeVector = {x: Math.cos(angleRad) * moveRight, z: -Math.sin(angleRad) * moveRight};
-
-        // Combineer de voorwaartse en zijwaartse bewegingen
-        const movement = {
-            x: forwardVector.x + strafeVector.x,
-            z: forwardVector.z + strafeVector.z
-        };
-
-        // Pas de nieuwe positie van de rig aan
-        const currentPosition = rig.getAttribute('position');
-        rig.setAttribute('position', {
-            x: currentPosition.x + movement.x,
-            y: currentPosition.y,
-            z: currentPosition.z + movement.z
-        });
-    });
-</script>
 
 </body>
 </html>
